--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.2.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
