--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
